# ConvexHullTest

./: CMakeLists.txt  README.md
ConvexHull/include/: TestDll.h
ConvexHull/lib/: testdll.lib  testlib.lib  testlib_d.lib
src/: test.cpp
